Added Ethan's Bio Content

--- a/index.html
+++ b/index.html
@@ -70,11 +70,11 @@
             <h3 class="lb_heading">Ethan Jutila</h3>
 
             <p class="lb_text">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio distinctio praesentium numquam quo quisquam sit vitae sed possimus animi harum nihil eum, ut rem sint. Omnis id natus asperiores blanditiis!
+                Ethan is from Thunder Bay Ontario and moved to London Ontario in search of new experiences, adventure, and knowledge. He plays for Fanshawe's very own Fanshawe FUEL eSports team in a game called VALORANT. 
             </p>
 
             <p class="lb_text">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita ratione eos blanditiis? Recusandae doloremque laboriosam sit, maiores dolore soluta quia natus minus est omnis blanditiis obcaecati consequuntur nemo aliquid laborum.
+                Ethan also loves to play guitar and perform and produce music for others. He likes all kinds of music, but his favourite genres consist of anything metal or rock related. But he is open to all forms of musical interpretations.
             </p>
         </article>
     </section>
